--- a/perfil.html
+++ b/perfil.html
@@ -206,7 +206,7 @@
 
       <div class="card">
         <span class="section-label">Información Vital</span>
-        <div class="menu-item" onclick="location.href='datos-salud.html'">
+        <div class="menu-item" onclick="location.href='#'">
           <div class="menu-icon"><i class="ph ph-drop"></i></div>
           <div class="menu-text">
             <div class="menu-title">Ficha Médica Base</div>
@@ -214,7 +214,7 @@
           </div>
           <i class="ph ph-caret-right chevron"></i>
         </div>
-        <div class="menu-item" onclick="location.href='emergencia.html'">
+        <div class="menu-item" onclick="location.href='#'">
           <div class="menu-icon" style="color: var(--red-status);"><i class="ph ph-phone-call"></i></div>
           <div class="menu-text">
             <div class="menu-title">Contactos de Emergencia</div>
