--- a/farmacias.html
+++ b/farmacias.html
@@ -59,16 +59,24 @@
     .btn-ph { flex: 1; padding: 12px 0; border-radius: 14px; font-size: 11px; font-weight: 800; text-decoration: none; text-transform: uppercase; display: flex; align-items: center; justify-content: center; gap: 6px; }
     .btn-map { background: var(--blue-main); color: #fff; }
 
-    .bottom-bar {
-      position: fixed; bottom: 24px; left: 50%; transform: translateX(-50%); width: 90%;
-      max-width: 360px; background: #ffffff; border-radius: 35px; height: 70px;
-      display: flex; align-items: center; justify-content: space-between; padding: 0 25px;
-      box-shadow: 0 8px 24px rgba(0, 0, 0, 0.1); z-index: 1000;
-    }
+    /* --- MODAL AYUDA --- */
+    .modal-backdrop { position: fixed; inset: 0; background: rgba(13, 43, 82, 0.4); backdrop-filter: blur(10px); display: none; justify-content: center; align-items: center; padding: 20px; z-index: 2000; }
+    .modal { background: #fff; width: 100%; max-width: 360px; border-radius: 35px; padding: 28px; box-shadow: 0 20px 50px rgba(0,0,0,0.2); position: relative; display: flex; flex-direction: column; }
+    .modal-top { display: flex; justify-content: space-between; align-items: center; margin-bottom: 20px; }
+    .modal-title { font-size: 19px; font-weight: 800; color: var(--text-dark); }
+    .x-close-btn { background: #f1f5f9; border: none; width: 36px; height: 36px; border-radius: 50%; display: flex; align-items: center; justify-content: center; color: var(--text-dark); cursor: pointer; }
+    .modal-body { font-size: 14px; color: var(--text-gray); line-height: 1.6; margin-bottom: 20px; }
+    .help-item { margin-bottom: 14px; display: flex; gap: 12px; }
+    .help-icon { color: var(--blue-main); font-size: 22px; }
+    .modal-footer { display: flex; justify-content: flex-start; border-top: 1px solid #f1f5f9; padding-top: 15px; }
+    .modal-back-btn { background: none; border: none; color: var(--blue-main); font-weight: 700; display: flex; align-items: center; gap: 6px; cursor: pointer; font-size: 15px; }
+
+    /* --- BOTTOM BAR --- */
+    .bottom-bar { position: fixed; bottom: 24px; left: 50%; transform: translateX(-50%); width: 90%; max-width: 360px; background: #ffffff; border-radius: 35px; height: 70px; display: flex; align-items: center; justify-content: space-between; padding: 0 25px; box-shadow: 0 8px 24px rgba(0, 0, 0, 0.1); z-index: 1000; }
     .nav-icon-btn { background: none; border: none; padding: 10px; cursor: pointer; color: var(--text-gray); transition: all 0.2s; }
     .nav-icon-btn.active { color: var(--blue-main); }
     .nav-icon-btn i { font-size: 26px; }
-    .center-question-btn { width: 64px; height: 64px; background: var(--blue-main); border-radius: 50%; border: 5px solid var(--main-bg); display: flex; align-items: center; justify-content: center; color: white; font-size: 32px; font-weight: 600; margin-top: -35px; box-shadow: 0 8px 20px rgba(31, 111, 229, 0.3); }
+    .center-question-btn { width: 64px; height: 64px; background: var(--blue-main); border-radius: 50%; border: 5px solid var(--main-bg); display: flex; align-items: center; justify-content: center; color: white; font-size: 32px; font-weight: 600; margin-top: -35px; box-shadow: 0 8px 20px rgba(31, 111, 229, 0.3); cursor: pointer; }
 
     @keyframes spin { 0% { transform: rotate(0deg); } 100% { transform: rotate(360deg); } }
   </style>
@@ -115,10 +123,23 @@
     <nav class="bottom-bar">
       <button class="nav-icon-btn" onclick="location.href='menu.html'"><i class="ph-bold ph-house"></i></button>
       <button class="nav-icon-btn" onclick="location.href='solicitar-turno.html'"><i class="ph-bold ph-calendar-blank"></i></button>
-      <div class="center-question-btn" onclick="location.href='asistente.html'">?</div>
+      <div class="center-question-btn" onclick="abrirModalAyuda()">?</div>
       <button class="nav-icon-btn active" onclick="location.href='farmacias.html'"><i class="ph-bold ph-prescription"></i></button>
       <button class="nav-icon-btn" onclick="location.href='perfil.html'"><i class="ph-bold ph-user"></i></button>
     </nav>
+  </div>
+
+  <div id="modal-container" class="modal-backdrop" onclick="cerrarModal()">
+    <div class="modal" onclick="event.stopPropagation()">
+      <div class="modal-top">
+        <h3 id="modal-title" class="modal-title">Ayuda</h3>
+        <button class="x-close-btn" onclick="cerrarModal()"><i class="ph ph-x"></i></button>
+      </div>
+      <div id="modal-body" class="modal-body"></div>
+      <div class="modal-footer">
+        <button class="modal-back-btn" onclick="cerrarModal()"><i class="ph ph-arrow-left"></i> Volver</button>
+      </div>
+    </div>
   </div>
 
   <script>
@@ -126,7 +147,32 @@
     let allPharmacies = [];
     let currentFilter = 'all';
 
-    // 1. CARGA INMEDIATA DESDE CACHÉ
+    // --- AYUDA CONTEXTUAL ---
+    function abrirModalAyuda() {
+      const modal = document.getElementById('modal-container');
+      const title = document.getElementById('modal-title');
+      const body = document.getElementById('modal-body');
+      title.innerText = "Ayuda: Farmacias";
+      body.innerHTML = `
+        <div class="help-item">
+          <i class="ph ph-navigation-arrow help-icon"></i>
+          <p><strong>Cercanía:</strong> Mostramos las farmacias en un radio de 5km de tu posición actual según la Ley C.U.R.A.</p>
+        </div>
+        <div class="help-item">
+          <i class="ph ph-clock help-icon"></i>
+          <p><strong>Estado:</strong> El indicador detecta si la farmacia está abierta ahora o si se encuentra de guardia las 24hs.</p>
+        </div>
+        <div class="help-item">
+          <i class="ph ph-map-pin help-icon"></i>
+          <p><strong>Navegación:</strong> Al pulsar "Llegar", se abrirá automáticamente el mapa nativo de tu dispositivo (Maps o iOS Maps).</p>
+        </div>
+      `;
+      modal.style.display = "flex";
+    }
+
+    function cerrarModal() { document.getElementById('modal-container').style.display = "none"; }
+
+    // --- CARGA DE DATOS ---
     const cachedPh = localStorage.getItem('cura_ph_cache');
     const cachedCity = localStorage.getItem('cura_city_cache');
     if (cachedCity) document.getElementById("loc-ciudad").innerText = cachedCity;
@@ -135,13 +181,11 @@
       renderFiltered();
     }
 
-    // 2. ACTUALIZACIÓN DE DATOS (GPS)
     if (navigator.geolocation) {
       navigator.geolocation.getCurrentPosition(async (pos) => {
         const lat = pos.coords.latitude;
         const lon = pos.coords.longitude;
         
-        // Ciudad
         fetch(`https://nominatim.openstreetmap.org/reverse?format=json&lat=${lat}&lon=${lon}`)
           .then(res => res.json()).then(data => {
             const city = data.address.city || data.address.town || "Cerca tuyo";
@@ -150,7 +194,6 @@
             localStorage.setItem('cura_city_cache', fullCity);
           });
 
-        // Farmacias (5KM)
         const query = `[out:json][timeout:15];node(around:5000,${lat},${lon})["amenity"="pharmacy"];out;`;
         fetch(`https://overpass-api.de/api/interpreter?data=${encodeURIComponent(query)}`)
           .then(res => res.json()).then(data => {
@@ -170,12 +213,10 @@
       if (!allPharmacies.length) return;
       let html = "";
       const now = new Date().getHours();
-
       let filtered = allPharmacies;
       if (currentFilter === 'open') filtered = allPharmacies.filter(f => (f.tags.opening_hours || "").includes("24/7") || (now >= 8 && now < 21));
       if (currentFilter === 'guardia') filtered = allPharmacies.filter(f => (f.tags.opening_hours || "").includes("24/7"));
 
-      // DETECTAR iOS
       const isIOS = /iPad|iPhone|iPod/.test(navigator.userAgent) && !window.MSStream;
 
       filtered.forEach(ph => {
@@ -185,11 +226,7 @@
                      { label: "Abierto", class: "bg-green-100 text-green-700" };
 
         const distStr = ph.dist ? (ph.dist > 1 ? ph.dist.toFixed(1)+'km' : (ph.dist*1000).toFixed(0)+'m') : '--';
-        
-        // LINK DINÁMICO SEGÚN SISTEMA OPERATIVO
-        const mapUrl = isIOS 
-          ? `http://maps.apple.com/?daddr=${ph.lat},${ph.lon}&dirflg=d` 
-          : `https://www.google.com/maps/dir/?api=1&destination=${ph.lat},${ph.lon}`;
+        const mapUrl = isIOS ? `http://maps.apple.com/?daddr=${ph.lat},${ph.lon}&dirflg=d` : `https://www.google.com/maps/dir/?api=1&destination=${ph.lat},${ph.lon}`;
 
         html += `
           <article class="pharmacy-card">
