--- a/solicitar-turno.html
+++ b/solicitar-turno.html
@@ -9,6 +9,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
   <script src="https://unpkg.com/@phosphor-icons/web"></script>
+  <script src="https://cdn.tailwindcss.com"></script>
 
   <style>
     :root {
@@ -25,7 +26,7 @@
 
     /* --- FIX 1: ESTABILIDAD DE PANTALLA --- */
     html {
-      overflow-y: scroll; /* Reserva el espacio del scroll siempre */
+      overflow-y: scroll; 
       scrollbar-width: none; 
     }
     ::-webkit-scrollbar { display: none; }
@@ -50,7 +51,7 @@
       max-width: 414px;
       display: flex;
       flex-direction: column;
-      padding-bottom: 120px; /* Unificado con el resto */
+      padding-bottom: 120px; 
     }
 
     /* --- HEADER SIMÉTRICO --- */
@@ -58,7 +59,7 @@
       background-color: var(--blue-header);
       width: calc(100% - 40px);
       margin: 20px auto 10px; 
-      height: 60px; /* Altura fija */
+      height: 60px; 
       border-radius: 999px;
       display: flex;
       align-items: center;
@@ -148,7 +149,26 @@
       cursor: pointer; box-shadow: 0 10px 20px rgba(31, 111, 229, 0.2); margin-top: 10px;
     }
 
-    /* --- BARRA INFERIOR (COPIA EXACTA) --- */
+    /* --- MODAL AYUDA (Premium) --- */
+    .modal-backdrop {
+      position: fixed; inset: 0; background: rgba(13, 43, 82, 0.4); backdrop-filter: blur(10px);
+      display: none; justify-content: center; align-items: center; padding: 20px; z-index: 2000;
+    }
+    .modal {
+      background: #fff; width: 100%; max-width: 360px; border-radius: 35px;
+      padding: 28px; box-shadow: 0 20px 50px rgba(0,0,0,0.2);
+      position: relative; display: flex; flex-direction: column;
+    }
+    .modal-top { display: flex; justify-content: space-between; align-items: center; margin-bottom: 20px; }
+    .modal-title { font-size: 19px; font-weight: 800; color: var(--text-dark); }
+    .x-close-btn { background: #f1f5f9; border: none; width: 36px; height: 36px; border-radius: 50%; display: flex; align-items: center; justify-content: center; color: var(--text-dark); cursor: pointer; }
+    .modal-body { font-size: 14px; color: var(--text-gray); line-height: 1.6; margin-bottom: 20px; }
+    .help-item { margin-bottom: 14px; display: flex; gap: 12px; }
+    .help-icon { color: var(--blue-main); font-size: 22px; }
+    .modal-footer { display: flex; justify-content: flex-start; border-top: 1px solid #f1f5f9; padding-top: 15px; }
+    .modal-back-btn { background: none; border: none; color: var(--blue-main); font-weight: 700; display: flex; align-items: center; gap: 6px; cursor: pointer; font-size: 15px; }
+
+    /* --- BARRA INFERIOR --- */
     .bottom-bar {
       position: fixed; bottom: 24px; left: 50%; transform: translateX(-50%); width: 90%;
       max-width: 360px; background: #ffffff; border-radius: 35px; height: 70px;
@@ -158,14 +178,7 @@
     .nav-icon-btn { background: none; border: none; padding: 10px; cursor: pointer; color: var(--text-gray); transition: all 0.2s; }
     .nav-icon-btn.active { color: var(--blue-main); }
     .nav-icon-btn i { font-size: 26px; }
-    
-    .center-question-btn { 
-      width: 64px; height: 64px; background: var(--blue-main); border-radius: 50%; 
-      border: 5px solid var(--main-bg); display: flex; align-items: center; 
-      justify-content: center; color: white; font-size: 32px; 
-      font-weight: 600; 
-      margin-top: -35px; box-shadow: 0 8px 20px rgba(31, 111, 229, 0.3); 
-    }
+    .center-question-btn { width: 64px; height: 64px; background: var(--blue-main); border-radius: 50%; border: 5px solid var(--main-bg); display: flex; align-items: center; justify-content: center; color: white; font-size: 32px; font-weight: 600; margin-top: -35px; box-shadow: 0 8px 20px rgba(31, 111, 229, 0.3); cursor: pointer; }
     .nav-icon-btn:active, .center-question-btn:active { transform: scale(0.9); }
   </style>
 </head>
@@ -255,10 +268,23 @@
     <nav class="bottom-bar">
       <button class="nav-icon-btn" onclick="location.href='menu.html'"><i class="ph-bold ph-house"></i></button>
       <button class="nav-icon-btn active" onclick="location.href='turnos.html'"><i class="ph-bold ph-calendar-blank"></i></button>
-      <div class="center-question-btn" onclick="location.href='asistente.html'">?</div>
+      <div class="center-question-btn" onclick="abrirModalAyuda()">?</div>
       <button class="nav-icon-btn" onclick="location.href='farmacias.html'"><i class="ph-bold ph-prescription"></i></button>
       <button class="nav-icon-btn" onclick="location.href='perfil.html'"><i class="ph-bold ph-user"></i></button>
     </nav>
+  </div>
+
+  <div id="modal-container" class="modal-backdrop" onclick="cerrarModal()">
+    <div class="modal" onclick="event.stopPropagation()">
+      <div class="modal-top">
+        <h3 id="modal-title" class="modal-title">Ayuda</h3>
+        <button class="x-close-btn" onclick="cerrarModal()"><i class="ph ph-x"></i></button>
+      </div>
+      <div id="modal-body" class="modal-body"></div>
+      <div class="modal-footer">
+        <button class="modal-back-btn" onclick="cerrarModal()"><i class="ph ph-arrow-left"></i> Volver</button>
+      </div>
+    </div>
   </div>
 
   <script>
@@ -267,6 +293,32 @@
     const docText = document.getElementById("doc-text");
     const especialidadSelect = document.getElementById("especialidad");
 
+    // LÓGICA DE AYUDA CONTEXTUAL
+    function abrirModalAyuda() {
+      const modal = document.getElementById('modal-container');
+      const title = document.getElementById('modal-title');
+      const body = document.getElementById('modal-body');
+      title.innerText = "Ayuda: Turnos";
+      body.innerHTML = `
+        <div class="help-item">
+          <i class="ph ph-brain help-icon"></i>
+          <p><strong>Asignación Inteligente:</strong> Si describes tu síntoma, el sistema te sugerirá la especialidad correcta automáticamente.</p>
+        </div>
+        <div class="help-item">
+          <i class="ph ph-video help-icon"></i>
+          <p><strong>Telemedicina:</strong> Algunos motivos permiten atención por videollamada para evitar traslados innecesarios.</p>
+        </div>
+        <div class="help-item">
+          <i class="ph ph-warning help-icon"></i>
+          <p><strong>Urgencias:</strong> Si tu cuadro es grave, no solicites turno aquí; dirígete de inmediato a la guardia más cercana.</p>
+        </div>
+      `;
+      modal.style.display = "flex";
+    }
+
+    function cerrarModal() { document.getElementById('modal-container').style.display = "none"; }
+
+    // LÓGICA DE SUGERENCIAS EN TIEMPO REAL
     motivoInput.addEventListener("input", () => {
       const val = motivoInput.value.toLowerCase();
       
